--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 initializr_ga.esproj/
+.sass-cache/2c11055f45c488d786a352fe5372b974bbf732fa/screen.scssc
+
+.sass-cache/940a2e599a676e17a24bb6785fbbdb6704d27f87/_reset.scssc
+
+gnammo_dev.esproj/Project.espressostorage
+
+.sass-cache/9ec29c715379918cf1b7f5d50949511a73503367/_blueprint.scssc
+
+.sass-cache/b44a4c949bbf6db8bb84af428a4daaf5bd5fd219/_base.scssc
+
+.sass-cache/b44a4c949bbf6db8bb84af428a4daaf5bd5fd219/_form.scssc
+
+.sass-cache/b44a4c949bbf6db8bb84af428a4daaf5bd5fd219/_page.scssc
+
+.sass-cache/b44a4c949bbf6db8bb84af428a4daaf5bd5fd219/_two_col.scssc
+
+gnammo_dev.esproj/user.gabrielemarchi.espressostorage
