--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,17 @@ gnammo_dev.esproj/Project.espressostorage
 .sass-cache/b44a4c949bbf6db8bb84af428a4daaf5bd5fd219/_two_col.scssc
 
 gnammo_dev.esproj/user.gabrielemarchi.espressostorage
+
+.sass-cache/08edf4594933d0d57a4b1a233c68a07d32103413/_nowrap.scssc
+
+.sass-cache/2c11055f45c488d786a352fe5372b974bbf732fa/ie.scssc
+
+.sass-cache/2c11055f45c488d786a352fe5372b974bbf732fa/print.scssc
+
+.sass-cache/64b63437858484b15c04511f6c7fce7a7e0a1de0/_grid-background.scssc
+
+.sass-cache/64b63437858484b15c04511f6c7fce7a7e0a1de0/_sticky-footer.scssc
+
+.sass-cache/64b63437858484b15c04511f6c7fce7a7e0a1de0/_stretching.scssc
+
+.sass-cache/940a2e599a676e17a24bb6785fbbdb6704d27f87/_colors.scssc
