--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ initializr_ga.esproj/
 gnammo_dev.esproj/Project.espressostorage
 
 gnammo_dev.esproj/user.gabrielemarchi.espressostorage
+
+.sass-cache
