ignore sass cache

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ gnammo_dev.esproj/user.gabrielemarchi.espressostorage
 .sass-cache/64b63437858484b15c04511f6c7fce7a7e0a1de0/_stretching.scssc
 
 .sass-cache/940a2e599a676e17a24bb6785fbbdb6704d27f87/_colors.scssc
+
+.sass-cache/
